--- a/config/config.json
+++ b/config/config.json
@@ -84,62 +84,145 @@
         "mod_id": ""
     },
     "aws": {
-        "regions": ["us-east-2", "us-east-1", "us-west-1", "us-west-2", "ap-east-1", "ap-south-1", "ap-northeast-3", "ap-northeast-2", "ap-southeast-1", "ap-southeast-2", "ap-northeast-1", "ca-central-1", "cn-north-1", "cn-northwest-1", "eu-central-1", "eu-west-1", "eu-west-2", "eu-west-3", "eu-north-1", "me-south-1", "sa-east-1", "us-gov-east-1", "us-gov-west-1"],
-        "size": ["t2.nano", "t2.micro", "t2.small", "t2.medium", "t2.large", "t2.xlarge", "t2.2xlarge", "a1.medium", "a1.large", "a1.xlarge", "a1.2xlarge", "a1.4xlarge", "t3.nano", "t3.micro", "t3.small", "t3.medium", "t3.large", "t3.xlarge", "t3.2xlarge", "t3a.nano", "t3a.micro", "t3a.small", "t3a.medium", "t3a.large", "t3a.xlarge", "t3a.2xlarge"],
+        "regions": [
+            "us-east-2",
+            "us-east-1",
+            "us-west-1",
+            "us-west-2",
+            "ap-east-1",
+            "ap-south-1",
+            "ap-northeast-3",
+            "ap-northeast-2",
+            "ap-southeast-1",
+            "ap-southeast-2",
+            "ap-northeast-1",
+            "ca-central-1",
+            "cn-north-1",
+            "cn-northwest-1",
+            "eu-central-1",
+            "eu-west-1",
+            "eu-west-2",
+            "eu-west-3",
+            "eu-north-1",
+            "me-south-1",
+            "sa-east-1",
+            "us-gov-east-1",
+            "us-gov-west-1"
+        ],
+        "size": [
+            "t2.nano",
+            "t2.micro",
+            "t2.small",
+            "t2.medium",
+            "t2.large",
+            "t2.xlarge",
+            "t2.2xlarge",
+            "a1.medium",
+            "a1.large",
+            "a1.xlarge",
+            "a1.2xlarge",
+            "a1.4xlarge",
+            "t3.nano",
+            "t3.micro",
+            "t3.small",
+            "t3.medium",
+            "t3.large",
+            "t3.xlarge",
+            "t3.2xlarge",
+            "t3a.nano",
+            "t3a.micro",
+            "t3a.small",
+            "t3a.medium",
+            "t3a.large",
+            "t3a.xlarge",
+            "t3a.2xlarge"
+        ],
         "default_region": "eu-west-1",
         "default_size": "t2.micro",
-        "supported_distros":  ["debian","kali","ubuntu"],
+        "supported_distros": [
+            "debian",
+            "kali",
+            "ubuntu"
+        ],
         "amis": {
-            "ap-northeast-1-debian": "ami-b6b568d0",
-            "ap-northeast-2-debian": "ami-b7479dd9",
-            "ap-south-1-debian": "ami-02aded6d",
-            "ap-southeast-1-debian": "ami-d76019b4",
-            "ap-southeast-2-debian": "ami-8359bae1",
-            "ca-central-1-debian": "ami-3709b053",
-            "eu-central-1-debian": "ami-8bb70be4",
-            "eu-west-1-debian": "ami-ce76a7b7",
-            "eu-west-2-debian": "ami-a6f9ebc2",
-            "sa-east-1-debian": "ami-f5c7b899",
-            "us-east-1-debian": "ami-71b7750b",
-            "us-east-2-debian": "ami-dab895bf",
-            "us-west-1-debian": "ami-58eedd38",
-            "us-west-2-debian": "ami-c032f6b8",
-            "ap-northeast-1-kali": "ami-0d701fcae946c61ed",
-            "ap-northeast-2-kali": "ami-0fbd27bb0a724c459",
-            "ap-south-1-kali": "ami-055e6bebd7c5e24c2",
-            "ap-southeast-1-kali": "ami-01027fa676ff2da3d",
-            "ap-southeast-2-kali": "ami-02811a36e6f758099",
-            "ca-central-1-kali": "ami-0f394074fe16decd6",
-            "eu-central-1-kali": "ami-0b61a044e0ae0d17d",
-            "eu-west-1-kali": "ami-0ac0bf7b0683eb820",
-            "eu-west-2-kali": "ami-071d0c011e7ab12f5",
-            "sa-east-1-kali": "ami-00c9b2d0ec9e3835c",
-            "us-east-1-kali": "ami-0c11557d0e4e9c896",
-            "us-east-2-kali": "ami-00f7390b60c41a3c0",
-            "us-west-1-kali": "ami-09aa8451f267643a9",
-            "us-west-2-kali": "ami-0a967289406d51ad4",
-            "ap-northeast-1-ubuntu": "ami-0f29c17df60493658",
-            "ap-northeast-2-ubuntu": "ami-065a2f32a35b7c52f",
-            "ap-south-1-ubuntu": "ami-05a3a2a452701c0ff",
-            "ap-southeast-1-ubuntu": "ami-05405da5795c2f2e7",
-            "ap-southeast-2-ubuntu": "ami-0243fb2a9c789bb43",
-            "ca-central-1-ubuntu": "ami-07d2c94058f3ca045",
-            "eu-central-1-ubuntu": "ami-07d14b5d47292e022",
-            "eu-west-1-ubuntu": "ami-014aff0119d738e34",
-            "eu-west-2-ubuntu": "ami-0339455b66e82a8ca",
-            "sa-east-1-ubuntu": "ami-0a32099c90454cc7a",
-            "us-east-1-ubuntu": "ami-07d1c0a30a7814597",
-            "us-east-2-ubuntu": "ami-083af2bfea9e15579",
-            "us-west-1-ubuntu": "ami-0b3f68410f4d4fed6",
-            "us-west-2-ubuntu": "ami-0652b0a864db01553"}
-        },
-        "digitalocean": {
-            "regions": ["NYC1", "NYC2", "NYC2", "SFO1", "SFO2", "AMS2", "AMS1", "LON1", "FRA1", "TOR1", "BLR1"],
-            "size": ["s-1vcpu-1gb"],
-            "default_region": "LON1",
-            "default_size": "s-1vcpu-1gb",
-            "supported_distros":  ["debian","ubuntu"]
-        },
-        "providers_list": ["digitalocean", "aws"],
-        "distros": ["debian","kali","ubuntu"]
-    }
+            "us-east-1-kali": "ami-04387c27258f75ab9",
+            "us-east-2-kali": "ami-09a1991ad1ab25594",
+            "us-west-1-kali": "ami-00f2461c16ae1004e",
+            "us-west-2-kali": "ami-05f28844db918b85f",
+            "ap-northeast-2-kali": "ami-0b957438a3666bf40",
+            "ap-southeast-1-kali": "ami-0aa72beade37ddc3b",
+            "ap-southeast-2-kali": "ami-0a8cbe15faa56641d",
+            "ap-northeast-1-kali": "ami-0f9d254c568533a84",
+            "ca-central-1-kali": "ami-045ce9cee2c3c613a",
+            "eu-central-1-kali": "ami-0d043d1c6dd1edcc8",
+            "eu-west-1-kali": "ami-04142cf75172ca746",
+            "eu-west-2-kali": "ami-0794045bcaf370ece",
+            "eu-west-3-kali": "ami-01f76178cf21ad160",
+            "eu-north-1-kali": "ami-0c4d05096e9fc37cf",
+            "sa-east-1-kali": "ami-00501936a311c3a5c",
+            "us-east-1-debian": "ami-04e75699808bf278d",
+            "us-east-2-debian": "ami-06e64b7656f57f7bb",
+            "us-west-1-debian": "ami-079d2d5dbb13cce01",
+            "us-west-2-debian": "ami-062eceda383f2fe45",
+            "ap-northeast-2-debian": "ami-0b9f5204ed2cfcdc6",
+            "ap-southeast-1-debian": "ami-05b178da5b38e7006",
+            "ap-southeast-2-debian": "ami-0fa2afadc6dd5c86f",
+            "ap-northeast-1-debian": "ami-048ff75e5a621f677",
+            "ca-central-1-debian": "ami-085826eb8b76f65c2",
+            "eu-central-1-debian": "ami-007fc75ff5d8a9f22",
+            "eu-west-1-debian": "ami-0e2cf721973d691c1",
+            "eu-west-2-debian": "ami-07f98e72c5fe4f774",
+            "eu-west-3-debian": "ami-0a1d43862d0ecaa52",
+            "eu-north-1-debian": "ami-06bcb3e0e7e28d7f5",
+            "sa-east-1-debian": "ami-059a9c515db72490b",
+            "us-east-1-ubuntu": "ami-0cf684dba6ec57ff5",
+            "us-east-2-ubuntu": "ami-001debeaafdba5bd7",
+            "us-west-1-ubuntu": "ami-0d42c01b79a51358a",
+            "us-west-2-ubuntu": "ami-0495db4017726ba27",
+            "ap-northeast-2-ubuntu": "ami-02dcbbc42ea6b0f2c",
+            "ap-southeast-1-ubuntu": "ami-0d32c37fad043253b",
+            "ap-southeast-2-ubuntu": "ami-02b1cda7411b56405",
+            "ap-northeast-1-ubuntu": "ami-078fe7e2375acdc59",
+            "ca-central-1-ubuntu": "ami-0c7c6fa3ed9f9a313",
+            "eu-central-1-ubuntu": "ami-04bcc4ef32f627671",
+            "eu-west-1-ubuntu": "ami-090743a28bddb025a",
+            "eu-west-2-ubuntu": "ami-0000ae6367872e49c",
+            "eu-west-3-ubuntu": "ami-03eebcd57a8c4a9ee",
+            "eu-north-1-ubuntu": "ami-0a916f8ec4ec9123b",
+            "sa-east-1-ubuntu": "ami-0bb78f003979cb946"
+        }
+    },
+    "digitalocean": {
+        "regions": [
+            "NYC1",
+            "NYC2",
+            "NYC2",
+            "SFO1",
+            "SFO2",
+            "AMS2",
+            "AMS1",
+            "LON1",
+            "FRA1",
+            "TOR1",
+            "BLR1"
+        ],
+        "size": [
+            "s-1vcpu-1gb"
+        ],
+        "default_region": "LON1",
+        "default_size": "s-1vcpu-1gb",
+        "supported_distros": [
+            "debian",
+            "ubuntu"
+        ]
+    },
+    "providers_list": [
+        "digitalocean",
+        "aws"
+    ],
+    "distros": [
+        "debian",
+        "kali",
+        "ubuntu"
+    ]
+}
